Fixed mobile optimisation gaps (v3)

--- a/css/style.css
+++ b/css/style.css
@@ -810,9 +810,35 @@ div.navbardiv {
 		padding-right: 0;
 		padding-bottom: 5px;
 	}
+	div.chatbot-text h2{
+		font-size: 14pt;
+		padding-top: 5px;
+		padding-bottom: 10px;
+		font-family: 'Montserrat', sans-serif;
+		line-height: 1.6em;
+		color: #ffffff;
+		text-decoration: none;
+		font-weight: bold;
+	}
+	div.chatbot-text p{
+		font-size: 11pt;
+		padding-top: 0;
+		padding-bottom: 10px;
+		font-family: 'Montserrat', sans-serif;
+		line-height: 1.6em;
+		color: #ffffff;
+		text-decoration: none;
+	}
 	div.chatbot-text h2, p{
 		text-align: center;
 	}
+
+	div.projects2 {
+		width: 100%;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
 	div.chatbot-images {
 		display: none;
 	}
